# Aksi

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  aksi.py  graph.py  llm_summary.py  mcp_server.py  pyproject.toml  scanner.py
Files/: aksi_bundle.html  index.json  metadata_cache  symbols.json
Files/graph/: index.html
aksi/: __init__.py  build.py  bundle.py  graph.py  io.py  mcp_server.py  mcp_tools.py  models.py  parsers.py  scan.py  scanner.py  sync.py  visualizer.py
scripts/: setup_mcp.sh  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase4.py  verify_phase5.py  verify_product_flow.py
src/engine/: analyzer.py  context.py  graph.py  io.py  scanner.py  sync.py
src/mcp/: server.py
src/web/: app.py
src/web/static/: index.html  script.js
tests/: test_graph.py  test_mcp_server.py  test_scanner.py
tests/fixtures/phase1_repo/pkg/: service.py
tests/fixtures/phase1_repo/web/: label.ts  widget.js
tests/fixtures/polyglot/src/: greeter.py
tests/fixtures/polyglot/web/: message.js
ui/: index.html
