[project]
name = "aksi"
version = "0.1.0"
description = "A local codebase navigator that builds static-analysis architecture maps."
requires-python = ">=3.12"
dependencies = [
  "tree-sitter>=0.22",
  "tree-sitter-languages>=1.10",
  "fastmcp>=2.0",
]

[project.scripts]
aksi-scan = "src.engine.scanner:main"
aksi-graph = "src.engine.graph:main"
aksi-mcp = "src.mcp.server:main"
