[project]
name = "aksi"
version = "0.1.0"
description = "A local Glass Blueprint MCP server for codebase visualization."
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3.2",
  "tree-sitter>=0.25",
  "tree-sitter-python>=0.25",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
multilang = [
  "tree-sitter-languages>=1.10; python_version < '3.14'",
]

[tool.setuptools]
py-modules = ["scanner", "graph", "mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
